fix hat vertical alignment

--- a/public/docs/css/site.css
+++ b/public/docs/css/site.css
@@ -1120,8 +1120,6 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }.transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}.cursor-default {
-  cursor: default;
 }.cursor-pointer {
   cursor: pointer;
 }.resize {
@@ -1270,8 +1268,6 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }.fill-\[\#111827\] {
   fill: #111827;
-}.fill-amp-blue-400 {
-  fill: #0d49cb;
 }.fill-amp-blue-500 {
   fill: #1e61f0;
 }.fill-amp-gray-500 {
@@ -1371,6 +1367,8 @@ video {
   text-align: center;
 }.align-middle {
   vertical-align: middle;
+}.align-bottom {
+  vertical-align: bottom;
 }.font-\[Gellix\] {
   font-family: Gellix;
 }.font-sans {
@@ -2235,8 +2233,6 @@ line-height: 1.25rem;
   background-color: rgb(244 245 246 / var(--tw-bg-opacity));
 }.hover\:fill-amp-blue-500:hover {
   fill: #1e61f0;
-}.hover\:fill-amp-blue-700:hover {
-  fill: #78a0f6;
 }.hover\:p-2:hover {
   padding: 0.5rem;
 }.hover\:text-amp-blue-500:hover {
@@ -2252,8 +2248,6 @@ line-height: 1.25rem;
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }.peer:hover ~ .peer-hover\:fill-amp-blue-500 {
   fill: #1e61f0;
-}.peer:hover ~ .peer-hover\:fill-amp-blue-700 {
-  fill: #78a0f6;
 }.prose-a\:text-amp-blue :is(:where(a):not(:where([class~="not-prose"],[class~="not-prose"] *))) {
   --tw-text-opacity: 1;
   color: rgb(30 97 240 / var(--tw-text-opacity));
